# HydroCodeSpherical1D

./: BlastWaves.hpp  Bondi.hpp  Boundaries.hpp  CMakeLists.txt  Cell.hpp  Cooling.hpp  DerivedParameters.hpp  EOS.hpp  HLLCRiemannSolver.hpp  IC.hpp  ICFile.hpp  LambertW.hpp  LogFile.hpp  OptionNames.hpp  Parameters.hpp  Parameters.hpp.in  PhysicalConstants.hpp  Potential.hpp  README.md  RiemannSolver.hpp  SafeParameters.hpp  Sedov.hpp  Sod.hpp  Spherical.hpp  Starbench.hpp  Timer.hpp  Units.hpp  add_density_perturbation.py  get_cmake_command.py  main_spherical.cpp  plot_ionisation_radius.py  plot_ionization_radius.py  plot_snaps.py  plot_starbench.py  run_bondi_run.sh  run_bondi_setup.sh  run_sedov_blast.sh  run_sedov_cooling.sh  run_sod_shock.sh  run_starbench.sh  (+9 more)
paper_workflows/: create_paper_figures.makeflow  fig_convergence_instability.py  fig_convergence_seed.py  fig_convergence_seed_radius.py  fig_convergence_stable.py  fig_instability.py  fig_radius.py  fig_stable_solution.py  write_transition_workflows.py
